fix typo and added visual control to the game

--- a/index.html
+++ b/index.html
@@ -14,6 +14,25 @@
 <body>
 <section id="GameOfLife" class="gameoflife">
     <div class="gameoflife-body"></div>
+    <footer class="gameoflife-footer">
+        <nav class="navbar navbar-default navbar-static-top">
+
+            <div class="row">
+                <div class="col-xs-7"></div>
+                <div class="col-xs-5">
+                    <div id="GameOfLife-Controls" class="gameoflife-controls">
+                        <div class="input-group">
+                            <div class="form-control" data-controls-viewport>0</div>
+                            <div class="input-group-addon" data-controls-toggle>
+                                <div class="glyphicon"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </nav>
+    </footer>
 </section>
 </body>
 </html>
