--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="row">
                 <div class="col-xs-8">
                     <select class="form-control" id="GameOfLife-Patterns">
-                        <option disabled selected>PATTERNS</option>
+                        <option value="0" disabled selected>PATTERNS</option>
                         <optgroup label="Still lifes">
                             <option value="1">BLOCK</option>
                             <option value="2">Beehive</option>
