--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
     <script src="application.js"></script>
 </head>
 <body>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-10 col-sm-offset-1">
+            <header class="">
+                <div class="page-header">
+                    <h1>Game Of Life <small>ECMASCRIPT - 6</small></h1>
+                </div>
+            </header>
+        </div>
+    </div>
+</div>
 <section id="GameOfLife" class="gameoflife">
     <div class="gameoflife-body"></div>
     <footer class="gameoflife-footer">
