hidden pulsar and pentadecathlon

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                                 <option value="5">Blinker (2 Life Cycle)</option>
                                 <option value="6">Toad (2 Life Cycle)</option>
                                 <option value="7">Beacon (2 Life Cycle)</option>
-                                <option value="8">Pulsar (3 Life Cycle)</option>
-                                <option value="9">Pentadecathlon (15 Life Cycle)</option>
+                                <!--<option value="8">Pulsar (3 Life Cycle)</option>-->
+                                <!--<option value="9">Pentadecathlon (15 Life Cycle)</option>-->
                             </optgroup>
                             <optgroup label="Spaceships">
                                 <option value="10">Glider</option>
