changed label on select

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <div class="input-group">
                         <label for="gameoflife-patterns" class="sr-only">Patterns</label>
                         <select class="form-control" id="GameOfLife-Patterns">
-                            <option value="0" selected>PATTERNS</option>
+                            <option value="0" selected>Empty</option>
                             <optgroup label="Still lifes">
                                 <option value="1">BLOCK</option>
                                 <option value="2">Beehive</option>
