fix [for] attr on label

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="row">
                 <div class="col-xs-8">
                     <div class="input-group">
-                        <label for="gameoflife-patterns" class="sr-only">Patterns</label>
+                        <label for="GameOfLife-Patterns" class="sr-only">Patterns</label>
                         <select class="form-control" id="GameOfLife-Patterns">
                             <option value="0" selected>Empty</option>
                             <optgroup label="Still lifes">
