--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>ECMAGAMEOFLIFE</title>
+    <link rel="icon" href="favicon.ico?v=1" type="image/x-icon">
 
     <script src="js/Cell.js"></script>
     <script src="js/GameOfLife.js"></script>
