--- a/index.html
+++ b/index.html
@@ -81,6 +81,28 @@
     </footer>
 </section>
 
+<footer id="Footer" class="footer-container">
+    <div class="footer">
+        <hr class="footer-divider" />
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-6">
+                    <div id="Hitmands" class="hitmands"></div>
+                </div>
+                <div class="col-xs-6">
+                    <div id="ChromeInfo" class="chromeinfo">
+                        <div class="row">
+                            <div class="col-xs-12 text-small">Tested with:</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-12"><img src="https://www.google.it/chrome/assets/common/images/chrome_logo_2x.png" alt="Google Chrome" class="chromeinfo-image" /><span class="chromeinfo-version">V. 51.0.2704.103 (64-Bit)</span></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
 <a href="https://github.com/hitmands/ecmagameoflife"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/652c5b9acfaddf3a9c326fa6bde407b87f7be0f4/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png"></a>
 </body>
 </html>
