--- a/index.html
+++ b/index.html
@@ -23,6 +23,18 @@
             </header>
         </div>
     </div>
+    <div class="row">
+        <div class="col-sm-10 col-sm-offset-1">
+            <div class="callout callout-warning">
+                <ul>
+                    <li>Any live cell with fewer than two live neighbours dies, as if caused by under-population.</li>
+                    <li>Any live cell with two or three live neighbours lives on to the next generation.</li>
+                    <li>Any live cell with more than three live neighbours dies, as if by over-population.</li>
+                    <li>Any dead cell with exactly three live neighbours becomes a live cell, as if by reproduction.</li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </div>
 <section id="GameOfLife" class="gameoflife">
     <div class="gameoflife-body"></div>
