added interval controls

--- a/index.html
+++ b/index.html
@@ -82,7 +82,15 @@
                             <div class="form-control lc-counter" data-controls-viewport>0</div>
                             <div class="input-group-addon">
                                 <div class="glyphicon glyphicon-time"></div>
-                                <span class="lc-interval">500</span>
+                                <span class="lc-interval"><span class="lc-interval-value" data-controls-lcintervaldisplay></span><span class="lc-interval-unit">MS</span></span>
+                            </div>
+                            <div class="input-group-addon lc-interval-ms">
+                                <div class="control" data-controls-interval-grow>
+                                    <div class="glyphicon glyphicon-triangle-top"></div>
+                                </div>
+                                <div class="control" data-controls-interval-shrink>
+                                    <div class="glyphicon glyphicon-triangle-bottom" ></div>
+                                </div>
                             </div>
                         </div>
                     </div>
